<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.serviceDetailPage.ServiceDetailPageFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/serviceImageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/serviceImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription"/>
            <View
                android:id="@+id/imageShadow"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/gradient"
                app:layout_constraintStart_toStartOf="@id/serviceImage"
                app:layout_constraintBottom_toBottomOf="@id/serviceImage"/>

            <TextView
                android:id="@+id/serviceNameTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_medium"
                android:textStyle="bold"
                android:textSize="27sp"
                app:layout_constraintStart_toStartOf="@id/serviceImage"
                app:layout_constraintBottom_toBottomOf="@id/serviceImage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/serviceStatsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/serviceImageContainer">

            <TextView
                android:id="@+id/numberOfProsTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableLeftCompat="@drawable/ic_icn_profesyonel_number_orange"
                android:drawablePadding="10dp"
                android:textColor="@color/green_background"
                android:fontFamily="@font/raleway_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/prosNearYouTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pros_near_you"
                android:textColor="@color/black"
                android:fontFamily="@font/raleway_medium"
                app:layout_constraintStart_toEndOf="@id/numberOfProsTw"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/serviceRatingTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:drawableLeftCompat="@drawable/ic_icn_star_average"
                android:drawablePadding="10dp"
                android:textColor="@color/green_background"
                android:fontFamily="@font/raleway_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/numberOfProsTw" />

            <TextView
                android:id="@+id/averageRatingTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="5dp"
                android:text="@string/average_rating"
                android:textColor="@color/black"
                android:fontFamily="@font/raleway_medium"
                app:layout_constraintStart_toEndOf="@id/serviceRatingTw"
                app:layout_constraintTop_toBottomOf="@id/numberOfProsTw" />

            <TextView
                android:id="@+id/completedJobLastMonthTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:drawableLeftCompat="@drawable/ic_icn_job_done_orange"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:text="@string/last_month"
                android:fontFamily="@font/raleway_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/serviceRatingTw" />
            <TextView
                android:id="@+id/completedJobTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/raleway_medium"
                app:layout_constraintStart_toEndOf="@id/completedJobLastMonthTw"
                app:layout_constraintTop_toBottomOf="@id/serviceRatingTw" />
            <TextView
                android:id="@+id/completedJobJobsCompletedTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:text="@string/cleaning_jobs_completed"
                android:fontFamily="@font/raleway_medium"
                app:layout_constraintStart_toEndOf="@id/completedJobTw"
                app:layout_constraintTop_toBottomOf="@id/serviceRatingTw" />

            <TextView
                android:id="@+id/freeOfChargeTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:drawableLeftCompat="@drawable/ic_icn_ucretsiz_kullan_orange"
                android:drawablePadding="10dp"
                android:text="@string/free_of_charge"
                android:textColor="@color/black"
                android:fontFamily="@font/raleway_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/completedJobTw" />

            <TextView
                android:id="@+id/serviceGuaranteedTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:drawablePadding="10dp"
                app:drawableLeftCompat="@drawable/ic_icn_hizmet_garanti_orange"
                android:text="@string/service_guaranteed"
                android:textColor="@color/black"
                android:fontFamily="@font/raleway_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/freeOfChargeTw" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/brLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/serviceStatsContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/serviceHowItWorksContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/brLine">

            <TextView
                android:id="@+id/popularServicesTw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_it_works"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/black"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/howItWorksContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularServicesTw">

                <LinearLayout
                    android:id="@+id/howItWorksItem_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_it_works_1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:background="@drawable/how_it_works_item_border"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/how_it_works_item_1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/howItWorksItem_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/how_it_works_2"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:background="@drawable/how_it_works_item_border"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/how_it_works_item_2"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/howItWorksItem_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/how_it_works_3"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:background="@drawable/how_it_works_item_border"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/how_it_works_item_3"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/serviceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="30dp"
            android:paddingVertical="12dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:text="@string/button_text"
            android:fontFamily="@font/raleway_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/serviceHowItWorksContainer"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>